<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/passwordImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/login_image"
            android:src="@drawable/password_48px" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:autofillHints="Account"
            android:background="@color/white"
            android:hint="@string/TypePasswordHint"
            android:inputType="textPassword"
            android:textSize="30sp"
            tools:ignore="LabelFor,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/line1"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/nameImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logout_image"
            android:src="@drawable/user_48px" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:autofillHints="Account"
            android:background="@color/white"
            android:hint="@string/TypeAccountHint"
            android:inputType="text"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/line2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/v1_0"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/loginButtonText"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape"
        android:text="@string/logoutButtonText"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>