<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/royal_blue">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/passwordImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/login_image"
            android:src="@drawable/password_48px" />

        <TextView
            android:id="@+id/passwordView"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/failLogin"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/line1"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/nameImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/logout_image"
            android:src="@drawable/user_48px" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/failLogin"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/v1_0"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/title"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        tools:ignore="UseCompoundDrawables">

        <Button
            android:id="@+id/switchUserButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="50"
            android:background="@drawable/btn_shape"
            android:text="@string/switchUser"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="50"
            android:background="@drawable/btn_shape"
            android:text="@string/logoutButtonText"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>